fix botton scrollbar

--- a/src/scss/components/_reset.scss
+++ b/src/scss/components/_reset.scss
@@ -23,6 +23,7 @@ html {
 	font-size: 18px;
 	width: 100vw;
 	scroll-behavior: smooth;
+	overflow-x: hidden;
 }
 
 body::-webkit-scrollbar-track {
